Added needed changes

--- a/index.html
+++ b/index.html
@@ -13,54 +13,118 @@
   </head>
   <body>
     <div class="container">
-      <h1>The Business Model Canvas</h1>
+      <h1>The "DEVTOOL" Business Model Canvas <font size="5">By Addam Bell</font></h1>
       <!-- Canvas -->
       <table id="bizcanvas" border="1">
         <tr>
           <td colspan="2" rowspan="2">
             <h4>Key Partners</h4>
               <ul>
-                  <li>SurgeWP</li>
-              </ul>            
-            <!--<p>more details 
-            <a class="" 
-              data-original-title="More details"
-              data-content="And here's some amazing content. It's very engaging. right?" 
+                  <li>
+                  <p><a class="" 
+              data-original-title="SurgeWP"
+              data-content="SurgeWP is the main key partner for this Project. With their direction, insight, and motivation for the project to help us create the best tool that we can." 
               data-placement="bottom"
-              rel="popover" href="#">...</a>
-            </p>-->
+              rel="popover" href="#">SurgeWP</a></p></li>
+              </ul>                      
           </td>
           <td colspan="2">
             <h4>Key Activities</h4>
                 <ul>
-                  <li>Lint and Check</li>
-                  <li>Create server</li>
-                  <li>Install Dependecys</li>
-                  <li>Depoly Package</li>                  
-                  <li>Monitor Health</li>
+                  <li><p> 
+            <a class="" 
+              data-original-title="Lint and Check"
+              data-content="With Lint we can check for any errors that may appear in the syntax that my cause problems. Also checking dead links or blank links we can make sure that we keep a clean environment for our Customers." 
+              data-placement="bottom"
+              rel="popover" href="#">Lint and Check</a></p>
+            </li>
+                  <li><p><a class="" 
+              data-original-title="Create Server"
+              data-content="By having the Server created on the fly it will increase deployment and Testing times, therefore keeping on schedule and minimizing errors." 
+              data-placement="bottom"
+              rel="popover" href="#">Create Server</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Install Dependency’s"
+              data-content="By automating the Install of Dependency’s we can save time eliminate human error if one of the dependency’s get missed." 
+              data-placement="bottom"
+              rel="popover" href="#">Install Dependency’s</a></p></li>
+
+
+              <li><p><a class="" 
+              data-original-title="Deploy Package"
+              data-content="By automating the package deployment we can maintain efficiently and speed. With All three environments being created at once with the package being deployed we save time over all." 
+              data-placement="bottom"
+              rel="popover" href="#">Deploy Package</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Monitor Health"
+              data-content="Creating away to Monitor Health we can keep an optimal uptime for our customers." 
+              data-placement="bottom"
+              rel="popover" href="#">Monitor Health</a></p></li>
+
               </ul>     
           </td>
           <td colspan="2" rowspan="2">
             <h4>Value Proposition</h4>
             <ul>
-                  <li>Quick Site Deployments</li>
-                  <li>Easy to use</li>
-                  <li>Check status of Enviroments</li>                  
+               <li><p><a class="" 
+              data-original-title="Quick Site Deployments"
+              data-content="Quick Site Deployments will increase productivity and save time for the customer and the deployment team." 
+              data-placement="bottom"
+              rel="popover" href="#">Quick Site Deployments</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Easy to use"
+              data-content="By keeping the product simple and easy to use anyone can start using it with minimal training or education on WP. This is save training hours and time." 
+              data-placement="bottom"
+              rel="popover" href="#">Easy to use</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Check status of Environments"
+              data-content="Being able to check status of environments we can keep a health and bug free site that increases up time and keeps the customers happy." 
+              data-placement="bottom"
+              rel="popover" href="#">Check status of Environments</a></p></li>
+
               </ul>     
           </td>
           <td colspan="2">
             <h4>Customer Relationship</h4>
             <ul>
-                  <li>Less errors on Deployments</li>
-                  <li>Faster customer service</li>
-                  <li>Get the testing done faster</li>
+              <li><p><a class="" 
+              data-original-title="Less errors on Deployments"
+              data-content="Less errors on Deployments means the site gets pushed faster and also catches the minimal errors that may have been missed by the developers and QA." 
+              data-placement="bottom"
+              rel="popover" href="#">Less errors on Deployments</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Faster customer service"
+              data-content="Faster customer service with Hot Fixes being deployed faster and with the health monitor we can catch the problem before the customer does." 
+              data-placement="bottom"
+              rel="popover" href="#">Faster customer service</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Get the testing done faster"
+              data-content="Get the testing done faster with the multiple servers being deployed and changes being automatically pushed to each environment for faster QA." 
+              data-placement="bottom"
+              rel="popover" href="#">Get the testing done faster</a></p></li>
+
               </ul>     
           </td>
           <td colspan="2" rowspan="2">
             <h4>Customer Segments</h4>
             <ul>
-                  <li>SurgeWP</li>
-                  <li>WordPress Users</li>
+                  <li><p><a class="" 
+              data-original-title="SurgeWP"
+              data-content="SurgeWP can used or sell this tool to help there deployment teams get sites tested and out faster to keep on contract." 
+              data-placement="bottom"
+              rel="popover" href="#">SurgeWP</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="WordPress Users"
+              data-content="WordPress Users can deploy their own sites faster and minimize errors. If all is setup accordingly it could be any website that gets deployed not just WP sites." 
+              data-placement="bottom"
+              rel="popover" href="#">WordPress Users</a></p></li>
               </ul>     
             <p>More<a class="" 
               data-original-title="More details"
@@ -72,20 +136,59 @@
         <tr>
           <td colspan="2">
             <h4>Key Resources</h4>
-            <ul>                  
-                  <li>Vegrant</li>
-                  <li>Wordpress</li>
-                  <li>Node.js</li>
-                  <li>Ruby</li>
-                  <li>Ubuntu</li>
-                  <li>SurgeWP</li>
+            <ul>
+            <li><p><a class="" 
+              data-original-title="Vagrant"
+              data-content="Vagrant will be used to create the servers and used to deploy the WP sites." 
+              data-placement="bottom"
+              rel="popover" href="#">Vagrant</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="WordPress"
+              data-content="WordPress is needed as this is the main market that we are aiming for at this time." 
+              data-placement="bottom"
+              rel="popover" href="#">WordPress</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Node.js"
+              data-content="Node.js will be used as the backend service for the chrome app and the actual tool site. Node gives us the flexibility that is needed for this project." 
+              data-placement="bottom"
+              rel="popover" href="#">Node.js</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Ruby"
+              data-content="Ruby is requires as a dependency for vagrant. Ruby could also be used in the future for Ruby on Rails site deploys." 
+              data-placement="bottom"
+              rel="popover" href="#">Ruby</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Ubuntu"
+              data-content="Ubuntu is the OS of the servers that will be used. Ubuntu is a solid system and has everything we need to run the sites." 
+              data-placement="bottom"
+              rel="popover" href="#">Ubuntu</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="SurgeWP"
+              data-content="SurgeWP is a Key Recourse as they are providing us with the criteria needed for this project and scope of possibilities." 
+              data-placement="bottom"
+              rel="popover" href="#">SurgeWP</a></p></li>                  
+
               </ul>     
           </td>
           <td colspan="2">
             <h4>Channels</h4>
             <ul>
-                  <li>Faster WP Deployment</li>
-                  <li>More accurate Deployments</li>
+              <li><p><a class="" 
+              data-original-title="Faster WP Deployment"
+              data-content="Faster is better!!!" 
+              data-placement="bottom"
+              rel="popover" href="#">Faster WP Deployment</a></p></li> 
+
+              <li><p><a class="" 
+              data-original-title="More accurate Deployments"
+              data-content="More accurate Deployments safe time and money. Plus keeps everyone happy." 
+              data-placement="bottom"
+              rel="popover" href="#">More accurate Deployments</a></p></li> 
             </ul>     
           </td>
         </tr>
@@ -93,14 +196,41 @@
           <td colspan="5">
             <h4>Cost Structure</h4>
             <ul>
-                  <li>Hosting</li>
+              <li><p><a class="" 
+              data-original-title="Hosting"
+              data-content="The cost of Hosting can change based on where everything is being hosted or if a CDN is being used to maintain up time and speed." 
+              data-placement="bottom"
+              rel="popover" href="#">Hosting</a></p></li> 
+
+              <li><p><a class="" 
+              data-original-title="Marketing"
+              data-content="Marketing will be needed to gain popularity of the Tool when it is ready for everyday customer use." 
+              data-placement="bottom"
+              rel="popover" href="#">Marketing</a></p></li> 
+
             </ul>     
           </td>
           <td colspan="5">
             <h4>Revenue Streams</h4>
             <ul>
-                  <li>WP Design and Hosting</li>
-                  <li>Monthly Manitance</li>                  
+            <li><p><a class="" 
+              data-original-title="WP Design and Hosting"
+              data-content="Design and hosting could be the main source of income until this tool is ready for public consumption. Plus with the time safe on deployments we can design more and generate more revenue." 
+              data-placement="bottom"
+              rel="popover" href="#">WP Design and Hosting</a></p></li> 
+
+              <li><p><a class="" 
+              data-original-title="Monthly Maintenance"
+              data-content="Monthly Maintenance should always be considered as there are too many variables and unknowns that can happen." 
+              data-placement="bottom"
+              rel="popover" href="#">Monthly Maintenance</a></p></li>
+
+              <li><p><a class="" 
+              data-original-title="Dev Tool"
+              data-content="The Dev Tool over time should generate income itself over time as a monthly charged maintained tool." 
+              data-placement="bottom"
+              rel="popover" href="#">Dev Tool</a></p></li>         
+                                
             </ul>     
           </td>
         </tr>
